--- a/src/ui/controls/progress/progress.scss
+++ b/src/ui/controls/progress/progress.scss
@@ -34,6 +34,10 @@
   border: none;
   background: transparent;
 
+  @include in-full-screen() {
+    height: 3px;
+    margin: -2px 0 0;
+  }
   appearance: none;
 
   &::-webkit-progress-bar {
@@ -101,6 +105,11 @@
   border: none;
   border-radius: 100%;
   background: #fff;
+
+  @include in-full-screen() {
+    width: 15px;
+    height: 15px;
+  }
 }
 
 .seek-control {
@@ -110,7 +119,7 @@
   display: block;
 
   width: 100%;
-  height: 15px;
+  height: 16px;
   margin: 0;
   padding: 0;
 
@@ -147,6 +156,10 @@
     color: transparent;
     border: 0;
     background: transparent;
+
+    @include in-full-screen() {
+      height: 3px;
+    }
   }
   &::-ms-fill-upper {
     background: transparent;
@@ -159,6 +172,9 @@
     color: $color-main;
     background: $color-main;
 
+    @include in-full-screen() {
+      height: 3px;
+    }
     @include seek-track();
   }
   &::-ms-thumb {
