[VOD-977] align watch on site margins according to design

--- a/src/ui/controls/watch-on-site/watch-on-site.scss
+++ b/src/ui/controls/watch-on-site/watch-on-site.scss
@@ -11,6 +11,10 @@
 
   justify-content: center;
   align-items: center;
+  @include max-width-550() {
+    margin-right: 12px;
+    margin-left: 6px;
+  }
 }
 
 .wrapper img {
