[VOD-977] use proper styles for watch on site in fullscreen mode

--- a/src/ui/controls/watch-on-site/watch-on-site.scss
+++ b/src/ui/controls/watch-on-site/watch-on-site.scss
@@ -15,6 +15,9 @@
     margin-right: 12px;
     margin-left: 6px;
   }
+  @include in-full-screen() {
+    margin-right: 30px;
+  }
 }
 
 .wrapper img {
