--- a/src/ui/ui.scss
+++ b/src/ui/ui.scss
@@ -54,6 +54,7 @@ $font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-4
   }
 }
 
+.fill-all-space,
 .full-screen {
   width: 100%!important;
   height: 100%!important;
