--- a/src/ui/controls/watch-on-site/watch-on-site.scss
+++ b/src/ui/controls/watch-on-site/watch-on-site.scss
@@ -1,5 +1,6 @@
 @import '../../media-query-mixins';
 
+
 .hidden {
   visibility: hidden;
 
@@ -14,7 +15,11 @@
 
   margin-right: 18px;
 
+  cursor: pointer;
   transition: opacity .2s, visibility .2s;
+  transition-duration: .2s;
+
+  opacity: 1;
 
   justify-content: center;
   align-items: center;
@@ -25,6 +30,10 @@
   @include in-full-screen() {
     margin-right: 30px;
     margin-left: 0;
+  }
+
+  &:hover {
+    opacity: .7;
   }
 }
 
