Adding test for config-mapper

--- a/server/index.ejs
+++ b/server/index.ejs
@@ -53,7 +53,7 @@
     muted: false,
     loop: false,
     logger: true,
-    preload: "auto",
+    preload: "none",
     volume: 100,
     fillAllSpace: true,
     size: {
