--- a/src/default-modules/ui/controls/volume/volume.scss
+++ b/src/default-modules/ui/controls/volume/volume.scss
@@ -21,7 +21,7 @@ $color: white !default;
     height: 35px;
     margin-right: 30px;
   }
-  @include controls-max-width-300() {
+  @include max-width-300() {
     @include hidden();
   }
 
