--- a/server/index.ejs
+++ b/server/index.ejs
@@ -48,6 +48,9 @@
   const url = searchQuery.url ||  'https://video-dev.github.io/streams/x36xhzz/x36xhzz.m3u8';
   const type = searchQuery.type || 'HLS';
 
+  const texts = {}
+  texts[VideoPlayer.TEXT_LABELS.WATCH_ON_SITE_TOOLTIP] = 'Watch On Site';
+
   window.player = VideoPlayer.create({
     autoPlay: false,
     muted: false,
@@ -74,6 +77,7 @@
         logo: 'https://www.file-extensions.org/imgs/app-icon/128/10395/wix-icon.png'
       }
     },
+    texts: texts,
     overlay: false,
   });
 
