Some style fixes for watch on site tooltip and restructuring

--- a/server/index.ejs
+++ b/server/index.ejs
@@ -56,7 +56,7 @@
     muted: false,
     loop: false,
     logger: true,
-    preload: "none",
+    preload: "metadata",
     volume: 100,
     fillAllSpace: true,
     size: {
