--- a/server/index.ejs
+++ b/server/index.ejs
@@ -16,6 +16,7 @@
       overflow: hidden;
     }
   </style>
+  <script src="https://cdn.jsdelivr.net/ally.js/1.4.1/ally.min.js"></script>
   <% if (debug) { %>
   <script src="<%= staticsBaseUrl %>video-player-develop.bundle.js"></script>
   <% } else { %>
