--- a/src/default-modules/ui/controls/controls.scss
+++ b/src/default-modules/ui/controls/controls.scss
@@ -1,4 +1,4 @@
-@import '../shared';
+@import '../shared.global';
 
 .controls-block {
   position: absolute;
@@ -22,10 +22,9 @@
   align-items: center;
 
   &.activated,
-  &.video-paused {
+  &.video-paused,
+  &.ally-focus-within {
     .controls {
-      visibility: visible;
-
       opacity: 1;
     }
   }
@@ -39,14 +38,13 @@
   left: 0;
 
   display: flex;
-  visibility: hidden;
   flex: 1;
 
   width: 100%;
   max-width: 100%;
   height: 25px;
-  margin-bottom: 13px;
   padding-top: 13px;
+  padding-bottom: 13px;
 
   transition: opacity .2s, visibility .2s;
 
@@ -54,11 +52,11 @@
 
   align-items: center;
   @include in-full-screen() {
-    margin-bottom: 25px;
     padding-top: 25px;
+    padding-bottom: 25px;
   }
   @include max-width-550() {
-    margin-bottom: 7px;
     padding-top: 7px;
+    padding-bottom: 7px;
   }
 }
