--- a/src/default-modules/ui/controls/play/play.scss
+++ b/src/default-modules/ui/controls/play/play.scss
@@ -1,4 +1,4 @@
-@import '../../shared';
+@import '../../shared.global';
 
 .play-control {
   position: relative;
@@ -6,55 +6,56 @@
   display: flex;
 
   box-sizing: border-box;
-  width: 11px;
-  height: 15px;
-  margin-right: 18px;
-  margin-left: 18px;
+  width: 25px;
+  height: 25px;
+  margin-right: 11px;
+  margin-left: 11px;
 
   align-items: center;
   justify-content: flex-start;
   @include in-full-screen() {
-    width: 16px;
-    height: 21px;
-    margin-right: 30px;
-    margin-left: 30px;
+    width: 35px;
+    height: 35px;
+    margin-right: 20px;
+    margin-left: 20px;
   }
   @include max-width-550() {
-    margin-left: 12px;
+    margin-left: 5px;
   }
-
 }
 
 .playback-toggle {
-  width: 10px;
-  min-width: 10px;
-  height: 14px;
-  min-height: 14px;
+  width: 25px;
+  min-width: 25px;
+  height: 25px;
+  min-height: 25px;
 
   background-image: url('../../../../assets/pause.svg');
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: 10px 14px;
 
   @include in-full-screen() {
-    width: 15px;
-    min-width: 15px;
-    height: 21px;
-    min-height: 21px;
+    width: 35px;
+    min-width: 35px;
+    height: 35px;
+    min-height: 35px;
 
     background-size: 15px 21px;
 
     &.paused {
-      width: 16px;
-      min-width: 16px;
+      width: 35px;
+      min-width: 35px;
 
       background-size: 16px 21px;
     }
   }
 
   &.paused {
-    width: 11px;
-    min-width: 11px;
+    width: 25px;
+    min-width: 25px;
 
     background-image: url('../../../../assets/play.svg');
-    background-size: 11px 14px;
+    background-size: 10px 14px;
   }
 }
