--- a/src/default-modules/root-container/root-container.scss
+++ b/src/default-modules/root-container/root-container.scss
@@ -11,6 +11,8 @@ $font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-4
 
   height: inherit;
 
+  outline: none;
+
   ::-moz-focus-inner {
     border: 0;
   }
