Fixed appear of volume input when hovering outside of mute button

--- a/src/default-modules/ui/controls/volume/volume.global.scss
+++ b/src/default-modules/ui/controls/volume/volume.global.scss
@@ -2,3 +2,7 @@
   opacity: 1;
   outline: 2px solid rgba(56, 153, 236, .8);
 }
+
+[data-hook='volume-control'].ally-focus-within {
+  overflow: visible;
+}
