Tunning of styles for watch-on-site tooltip

--- a/src/default-modules/ui/controls/watch-on-site/watch-on-site.scss
+++ b/src/default-modules/ui/controls/watch-on-site/watch-on-site.scss
@@ -100,12 +100,12 @@
   line-height: 20px;
 
   position: absolute;
-  top: -25px;
+  top: -30px;
   right: -12px;
 
   visibility: hidden;
 
-  padding: 0 5px;
+  padding: 3px 10px;
 
   transition: opacity .2s, visibility .2s;
   white-space: nowrap;
