--- a/src/default-modules/root-container/root-container.scss
+++ b/src/default-modules/root-container/root-container.scss
@@ -1,4 +1,4 @@
-@import '../ui/shared.global';
+@import '../ui/shared';
 
 
 $font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-45Ligh,Helvetica Neue,Helvetica,Arial,\\30E1\30A4\30EA\30AA,meiryo,\\30D2\30E9\30AE\30CE\89D2\30B4 pro w3,hiragino kaku gothic pro;
@@ -26,4 +26,21 @@ $font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-4
 .full-screen {
   width: 100%!important;
   height: 100%!important;
+}
+
+:global {
+  [data-focus-source='key'] [data-hook='player-container'],
+  [data-focus-source='script'] [data-hook='player-container'] {
+    button.ally-focus-within,
+    input.ally-focus-within,
+    img.ally-focus-within {
+      outline: 2px solid rgba(56, 153, 236, .8);
+    }
+  }
+
+  [data-hook='player-container'] {
+    * {
+      outline: none;
+    }
+  }
 }
