--- a/src/default-modules/ui/controls/time/time.scss
+++ b/src/default-modules/ui/controls/time/time.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex: 0 0 auto;
 
-  height: 15px;
+  //height: 15px;
   margin-right: 18px;
 
   align-items: center;
@@ -18,7 +18,7 @@
 
 .time {
   font-size: 12px;
-  line-height: 12px;
+  //line-height: 12px;
 
   color: $color-main;
 
