--- a/src/default-modules/ui/loading-cover/loading-cover.scss
+++ b/src/default-modules/ui/loading-cover/loading-cover.scss
@@ -11,13 +11,15 @@
   width: 100%;
   height: 100%;
 
-  transition: opacity .3s, visibility .3s;
+  transition: opacity .3s, visibility .3s, transform .3s;
 
   background: black no-repeat center;
   background-size: contain;
 
   justify-content: center;
   align-items: center;
+
+  animation: trans 15s linear infinite;
 }
 
 .hidden {
@@ -30,4 +32,18 @@
   height: 100%;
 
   transition: opacity .6s, visibility .6s;
+}
+
+@keyframes trans {
+  30% {
+    transform: perspective(1000px) rotate3d(0, 10, 0, 10deg);
+  }
+
+  60% {
+    transform: perspective(1000px) rotate3d(0, 10, 0, 10deg);
+  }
+
+  100% {
+    transform: perspective(1000px) rotate3d(0, 10, 10, 10deg);
+  }
 }
