--- a/src/default-modules/ui/controls/volume/volume.scss
+++ b/src/default-modules/ui/controls/volume/volume.scss
@@ -153,13 +153,13 @@ $color: white !default;
 }
 
 :global {
-  [data-focus-source='key'] [data-hook='volume-control'] [data-hook='input-container'].ally-focus-within,
-  [data-focus-source='script'] [data-hook='volume-control'] [data-hook='input-container'].ally-focus-within {
+  [data-focus-source='key'] [data-hook='volume-control'] [data-hook='input-container'].focus-within,
+  [data-focus-source='script'] [data-hook='volume-control'] [data-hook='input-container'].focus-within {
     opacity: 1;
     outline: 2px solid rgba(56, 153, 236, .8);
   }
 
-  [data-hook='volume-control'].ally-focus-within,
+  [data-hook='volume-control'].focus-within,
   [data-hook='volume-control']:hover {
     overflow: visible;
   }
