--- a/src/default-modules/ui/loading-cover/loading-cover.scss
+++ b/src/default-modules/ui/loading-cover/loading-cover.scss
@@ -12,16 +12,21 @@
   height: 100%;
 
   transition: opacity .3s, visibility .3s, transform .3s;
-  animation: trans 15s linear infinite;
+  //animation: trans 15s linear infinite;
 
   background: black no-repeat center;
   background-size: contain;
 
   justify-content: center;
   align-items: center;
+
+  &.hidden {
+    animation: none;
+  }
 }
 
 .hidden {
+  display: none !important;
   visibility: hidden !important;
 
   opacity: 0 !important;
