--- a/src/default-modules/ui/controls/progress/progress.scss
+++ b/src/default-modules/ui/controls/progress/progress.scss
@@ -14,6 +14,9 @@
   @include in-full-screen() {
     margin-right: 20px;
   }
+  @include max-width-400() {
+    @include hidden();
+  }
 }
 
 .progress-bar {
