cards module basic realization

--- a/video-player-cards/src/index.ejs
+++ b/video-player-cards/src/index.ejs
@@ -23,9 +23,9 @@
     }
   </style>
   <% if (debug) { %>
-  <script src="<%= staticsBaseUrl %>player-with-module.bundle.js"></script>
+  <script src="<%= staticsBaseUrl %>demo.bundle.js"></script>
   <% } else { %>
-  <script src="<%= staticsBaseUrl %>player-with-module.bundle.min.js"></script>
+  <script src="<%= staticsBaseUrl %>demo.bundle.min.js"></script>
   <% } %>
 </head>
 <body>
@@ -37,32 +37,7 @@
 
 <script>
   document.addEventListener('DOMContentLoaded', function() {
-     window.player = SingularModule.default.VideoPlayer.create({
-      autoPlay: false,
-      muted: false,
-      loop: false,
-      logger: true,
-      preload: "auto",
-      volume: 0.5,
-      size: {
-        width: 760,
-        height: 428
-      },
-      loadingCover: 'https://i.imgflip.com/1rjoyq.jpg',
-      src: [
-        'https://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4',
-      ],
-      controls: {
-        watchOnSite: {
-          url: 'http://www.wix.com/',
-          showAlways: true,
-          logo: 'https://www.file-extensions.org/imgs/app-icon/128/10395/wix-icon.png'
-        }
-      },
-      overlay: false,
-    }, false);
-
-    window.player.attachToElement(document.getElementById('player'));
+    CardsModuleDemo.player.attachToElement(document.getElementById('player'));
   });
 </script>
 </body>
