--- a/video-player-cards/src/cards-module/card/card.scss
+++ b/video-player-cards/src/cards-module/card/card.scss
@@ -1,3 +1,33 @@
 .container {
   padding: 6px;
+
+  &.appeared {
+    animation-name: appear;
+    animation-duration: .2s;
+    opacity: 1;
+  }
+
+  &.disappeared {
+    animation-name: disappear;
+    animation-duration: .2s;
+    opacity: 0;
+  }
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes disappear {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
