Adding proper paddings

--- a/video-player-cards/src/cards-module/cards-container/cards-container.scss
+++ b/video-player-cards/src/cards-module/cards-container/cards-container.scss
@@ -1,16 +1,34 @@
+@mixin in-full-screen() {
+  div[data-hook='player-container'][data-in-full-screen='true'] & {
+    @content
+  }
+}
+
+@mixin max-width-550() {
+  div[data-hook='player-container'][#{max-width}~=#{'"550px"'}] & {
+    @content
+  }
+}
+
 .container {
   position: absolute;
   z-index: 65;
   bottom: 12px;
   display: flex;
   overflow: hidden;
-  box-sizing: border-box;
   padding: 0 12px;
-
   flex-wrap: wrap;
   height: 122px;
 
   transition: bottom .2s;
+
+  @include max-width-550() {
+    padding: 0 6px;
+  }
+
+  @include in-full-screen() {
+    padding: 0 24px;
+  }
 
   &.direction-left-to-right {
     flex-direction: row;
@@ -22,29 +40,77 @@
 
   &.anchor-top-left {
     left: 0;
-    top: 0;
+    top: 12px;
+
+    @include max-width-550() {
+      top: 18px;
+    }
+
+    @include in-full-screen() {
+      top: 24px;
+    }
   }
 
   &.anchor-top-right {
     right: 0;
-    top: 0;
+    top: 12px;
+
+    @include max-width-550() {
+      top: 18px;
+    }
+
+    @include in-full-screen() {
+      top: 24px;
+    }
   }
 
   &.anchor-bottom-left {
     left: 0;
-    bottom: 0;
+    bottom: 12px;
+
+    @include max-width-550() {
+      bottom: 18px;
+    }
+
+    @include in-full-screen() {
+      bottom: 24px;
+    }
 
     &.controls-showed {
       bottom: 45px;
+
+      @include max-width-550() {
+        bottom: 33px;
+      }
+
+      @include in-full-screen() {
+        bottom: 79px;
+      }
     }
   }
 
   &.anchor-bottom-right {
     right: 0;
-    bottom: 0;
+    bottom: 12px;
+
+    @include max-width-550() {
+      bottom: 18px;
+    }
+
+    @include in-full-screen() {
+      bottom: 24px;
+    }
 
     &.controls-showed {
       bottom: 45px;
+
+      @include max-width-550() {
+        bottom: 33px;
+      }
+
+      @include in-full-screen() {
+        bottom: 79px;
+      }
     }
   }
 }
